--- a/src/app/components/admin/apartments/apartments-add/apartments-add.component.html
+++ b/src/app/components/admin/apartments/apartments-add/apartments-add.component.html
@@ -23,7 +23,6 @@
             <mat-form-field class="my-2" appearance="outline">
               <mat-label>Numer Budynku</mat-label>
               <input matInput placeholder="Numer Budynku" formControlName="buildingnumber">
-              <mat-error *ngIf="firstFormGroup.controls['buildingnumber'].hasError('required')">Numer Budynku jest wymagany</mat-error>
             </mat-form-field>
           </div>
           <div class="col">
@@ -48,7 +47,8 @@
             <mat-form-field class="my-2" appearance="outline">
               <mat-label>Powierzchnia (m2)</mat-label>
               <input matInput placeholder="Np. 2.05" formControlName="area" min="0.01" step="0.01">
-              <mat-error *ngIf="firstFormGroup.controls['postcode'].hasError('required')">Powierzchnia jest wymagana</mat-error>
+              <mat-error *ngIf="firstFormGroup.controls['area'].hasError('required')">Powierzchnia jest wymagana</mat-error>
+              <mat-error *ngIf="firstFormGroup.controls['area'].hasError('pattern')">Niepoprawnie wprowadzone pole</mat-error>
             </mat-form-field>
           </div>
           <div class="col">
