--- a/src/app/components/admin/payments/payments-edit/payments-edit.component.html
+++ b/src/app/components/admin/payments/payments-edit/payments-edit.component.html
@@ -49,7 +49,7 @@
       </div>
     </form>
     <div>
-      <button mat-raised-button color="warn" matStepperNext>Przejdź Dalej</button>
+      <button mat-raised-button color="primary" matStepperNext>Przejdź Dalej</button>
     </div>
   </mat-step>
   <mat-step>
@@ -59,7 +59,7 @@
     </div>
     <div fxLayout="row" fxLayoutGap="20">
       <button mat-raised-button matStepperPrevious>Cofnij</button>
-      <button mat-raised-button color="warn" (click)="editPayment()">Edytuj Płatność</button>
+      <button mat-raised-button color="primary" (click)="editPayment()">Edytuj Płatność</button>
     </div>
   </mat-step>
 </mat-stepper>
