--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="authService.isLogged | async; else NOLOGGED" style="height: 100vh;">
 <mat-toolbar color="primary" class="p-2">
   <mat-toolbar-row>
-    <button mat-icon-button fxShow="true" fxHide.gt-sm>
+    <button mat-icon-button fxShow="true" (click)="sidenav.toggle()" fxHide.gt-sm>
       <mat-icon>menu</mat-icon>
     </button>
     <img src="assets/images/home.png" alt="Logo" class="image-logo">
@@ -41,8 +41,21 @@
 <mat-sidenav-container>
 <mat-sidenav #sidenav>
   <mat-nav-list>
-    <a href="/" mat-list-item>Panel</a>
-    <a (click)="sidenav.toggle()" href="" mat-list-item>Zamknij</a>
+    <span *ngIf="authService.userMod | async; else NoMod"></span>
+    <a routerLinkActive="active" ref="/" mat-list-item><mat-icon aria-hidden="false" aria-label="bento">bento</mat-icon> Ustawienia</a>
+    <a routerLinkActive="active" [routerLink]="['raports']" mat-list-item><mat-icon aria-hidden="false" aria-label="speaker_notes">speaker_notes</mat-icon> Raporty</a>
+    <a routerLinkActive="active" [routerLink]="['addraport']" mat-list-item><mat-icon aria-hidden="false" aria-label="post_add">post_add</mat-icon> Dodaj Raport</a>
+    
+    <a routerLinkActive="active" [routerLink]="['apartments']" mat-list-item><mat-icon aria-hidden="false" aria-label="domain">domain</mat-icon> Lokale</a>
+    <a routerLinkActive="active" [routerLink]="['users']" mat-list-item><mat-icon aria-hidden="false" aria-label="supervisor_account">supervisor_account</mat-icon> Użytkownicy</a>
+    <a routerLinkActive="active" [routerLink]="['payments']" mat-list-item><mat-icon aria-hidden="false" aria-label="payments">payments</mat-icon> Płatności</a>
+      
+    
+    <ng-template #NoMod>
+      <a [routerLink]="['/']" mat-button><mat-icon aria-hidden="false" aria-label="bento">bento</mat-icon> Panel</a>
+      <a routerLinkActive="active" [routerLink]="['user/raports']" mat-list-item><mat-icon aria-hidden="false" aria-label="ballot">ballot</mat-icon> Moje Rozliczenia</a>
+    </ng-template>
+    <a (click)="authService.logout()" mat-button><mat-icon aria-hidden="false" aria-label="logout">logout</mat-icon> Wyloguj</a>
   </mat-nav-list>
 </mat-sidenav>
 <mat-sidenav-content>
