--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
           <mat-error *ngIf="form.controls['password'].hasError('required')">Hasło jest wymagane</mat-error>
           <mat-error *ngIf="form.controls['password'].hasError('minlength')">Hasło jest zbyt krótkie</mat-error>
         </mat-form-field>
-        <button mat-raised-button color="primary" type="submit" [disabled]="!form.valid"> Zaloguj się </button>
+        <button mat-raised-button color="primary" [class.spinner]="loading" type="submit" [disabled]="!form.valid||loading"> Zaloguj się </button>
       </mat-card-content>
     </form>
     <mat-card-footer>
