--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,30 +1,50 @@
 mat-card {
-    padding: 50px;
-  }
-  
-  .example-container {
-     height: 100%;
-    }
-    
-  
-    .loginform {
-      height: 100%;
-    }
-  
-    mat-card {
-      background: #ffffffcc;
-    }
-    
-    .loginform:before {
-      content: ' ';
-      display: block;
-      position: absolute;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.6;
-      background:url(/../../assets/images/bg-logo.png);
-      background-repeat: no-repeat;
-      background-position: 50% 20%;
-    }
+  padding: 50px;
+}
+
+.example-container {
+  height: 100%;
+}
+
+
+.loginform {
+  height: 100%;
+}
+
+mat-card {
+  background: #ffffffcc;
+}
+
+.loginform:before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.6;
+  background: url(/../../assets/images/bg-logo.png);
+  background-repeat: no-repeat;
+  background-position: 50% 20%;
+}
+
+@keyframes spinner {
+  to {transform: rotate(360deg);}
+}
+ 
+.spinner:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  border-top-color: #000000;
+  animation: spinner .8s linear infinite;
+}
