--- a/src/app/components/admin/apartments/apartments-add/apartments-add.component.html
+++ b/src/app/components/admin/apartments/apartments-add/apartments-add.component.html
@@ -8,7 +8,8 @@
                 <mat-label>Użytkownik</mat-label>
                 <mat-select formControlName="owner" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika">
                   <mat-option *ngFor="let user of users | async" [value]="user">{{user.name}} {{user.lastname}}</mat-option></mat-select>
-              </mat-form-field>
+                  <mat-error *ngIf="firstFormGroup.controls['owner'].hasError('required')">Lokal musi mieć przypisanego mieszkańca</mat-error>
+                </mat-form-field>
             </div>
         </div>
         <div class="row">
@@ -47,7 +48,7 @@
           <div class="col">
             <mat-form-field class="my-2" appearance="outline">
               <mat-label>Powierzchnia (m2)</mat-label>
-              <input matInput placeholder="Np. 2.05" formControlName="area" min="0.01" step="0.01">
+              <input matInput placeholder="X.XX" formControlName="area" min="0.01" step="0.01">
               <mat-error *ngIf="firstFormGroup.controls['area'].hasError('required')">Powierzchnia jest wymagana</mat-error>
               <mat-error *ngIf="firstFormGroup.controls['area'].hasError('pattern')">Niepoprawnie wprowadzone pole</mat-error>
             </mat-form-field>
@@ -57,6 +58,7 @@
               <mat-label>Stawka (za m2)</mat-label>
               <input matInput placeholder="X.XX" formControlName="rate" min="0.01" step="0.01">
               <mat-error *ngIf="firstFormGroup.controls['rate'].hasError('required')">Stawka jest wymagana</mat-error>
+              <mat-error *ngIf="firstFormGroup.controls['rate'].hasError('pattern')">Niepoprawnie wprowadzone pole</mat-error>
             </mat-form-field>
           </div>
         </div>
