--- a/src/app/components/admin/apartments/apartments-edit/apartments-edit.component.html
+++ b/src/app/components/admin/apartments/apartments-edit/apartments-edit.component.html
@@ -10,7 +10,7 @@
             <mat-form-field appearance="outline">
               <mat-label>Użytkownik</mat-label>
               <mat-select formControlName="owner" placeholder="Wybierz użytkownika">
-                <mat-option *ngFor="let user of users | async" [value]="user.uid">{{user.name}} {{user.lastname}}</mat-option>
+                <mat-option *ngFor="let user of authService.users | async" [value]="user.uid">{{user.name}} {{user.lastname}}</mat-option>
                 <mat-error *ngIf="form.controls['owner'].hasError('required')">Lokal musi mieć przypisanego mieszkańca</mat-error>
               </mat-select>
             </mat-form-field>
