--- a/src/app/components/admin/payments/payments-add/payments-add.component.html
+++ b/src/app/components/admin/payments/payments-add/payments-add.component.html
@@ -7,7 +7,7 @@
               <mat-form-field appearance="outline">
                 <mat-label>Użytkownik</mat-label>
                 <mat-select formControlName="user" (selectionChange)="selectUser($event)" placeholder="Wybierz użytkownika" required>
-                  <mat-option *ngFor="let user of users | async" [value]="user">{{user.name}} {{user.lastname}}</mat-option></mat-select>
+                  <mat-option *ngFor="let user of authService.users | async" [value]="user">{{user.name}} {{user.lastname}}</mat-option></mat-select>
                   <mat-error *ngIf="firstFormGroup.controls['user'].hasError('required')">Lokal musi mieć przypisanego mieszkańca</mat-error>
                 </mat-form-field>
             </div>
