--- a/src/app/components/admin/apartments/apartments-add/apartments-add.component.html
+++ b/src/app/components/admin/apartments/apartments-add/apartments-add.component.html
@@ -54,12 +54,14 @@
             </mat-form-field>
           </div>
           <div class="col">
-            <mat-form-field class="my-2" appearance="outline">
+            <app-input title="Stawka (za m2)" class="my-2" [minLength]=5 [maxLength]=5 [control]="rate" format="00,00|0,00" placeholder="X.XX"></app-input>
+
+            <!-- <mat-form-field class="my-2" appearance="outline">
               <mat-label>Stawka (za m2)</mat-label>
               <input matInput placeholder="X.XX" formControlName="rate" min="0.01" step="0.01">
               <mat-error *ngIf="firstFormGroup.controls['rate'].hasError('required')">Stawka jest wymagana</mat-error>
               <mat-error *ngIf="firstFormGroup.controls['rate'].hasError('pattern')">Niepoprawnie wprowadzone pole</mat-error>
-            </mat-form-field>
+            </mat-form-field> -->
           </div>
         </div>
   
