--- a/src/app/components/admin/users/users-edit/users-edit.component.html
+++ b/src/app/components/admin/users/users-edit/users-edit.component.html
@@ -59,13 +59,7 @@
             </div>
   
             <div class="col-6">
-              <mat-form-field appearance="outline">
-                <mat-label>Kod Pocztowy:</mat-label>
-                <input matInput type="text" [(ngModel)]="data.postcode" formControlName="postcode"
-                  placeholder="Kod Pocztowy" />
-                <mat-icon matSuffix>signpost</mat-icon>
-                <mat-hint>Kod Pocztowy</mat-hint>
-              </mat-form-field>
+              <app-input title="Kod Pocztowy" [ngModel]="data.postcode" [control]="postcode" [minLength]=6 [maxLength]=6 format="00-000"></app-input>
             </div>
   
   
@@ -88,19 +82,7 @@
             </div>
   
             <div class="col-6">
-              <mat-form-field appearance="outline">
-                <mat-label>Kontakt Telefoniczny:</mat-label>
-                <input matInput type="text" [(ngModel)]="data.phone" formControlName="phone"
-                  placeholder="Kontakt Telefoniczny" />
-                <mat-icon matSuffix>call</mat-icon>
-                <mat-hint>Kontakt Telefoniczny</mat-hint>
-  
-                <mat-error *ngIf="(form.get('login'))?.errors?.['required']">Login jest wymagany</mat-error>
-                <mat-error *ngIf="(form.get('login')?.errors?.['minLength'])">
-                  Login musi mięć więcej niż 6 znaków.
-                </mat-error>
-  
-              </mat-form-field>
+              <app-input title="Telefon Kontaktowy" [ngModel]="data.phone" [control]="phone" [minLength]=11 [maxLength]=11 format="000-000-000"></app-input>
             </div>
   
   
@@ -109,17 +91,8 @@
           </div>
   
   
-          <div class="row">
-            <div class="col-12">
-              <mat-form-field appearance="outline" class="fullwidth">
-                <mat-label>Rachunek Bankowy:</mat-label>
-                  <input matInput type="text" [(ngModel)]="data.bankaccount" formControlName="bankaccount"
-                  placeholder="Rachunek Bankowy" />
-                <mat-icon matSuffix>account_balance</mat-icon>
-                <mat-hint>Rachunek Bankowy</mat-hint>
-              </mat-form-field>
-            </div>
-  
+          <div class="col-12">
+            <app-input title="Rachunek Bankowy" class="fullwidth" [ngModel]="data.bankaccount" [control]="bankaccount" [minLength]=32 [maxLength]=32 format="00 0000 0000 0000 0000 0000 0000"></app-input>
           </div>
   
   
