--- a/src/app/components/admin/apartments/apartments-edit/apartments-edit.component.html
+++ b/src/app/components/admin/apartments/apartments-edit/apartments-edit.component.html
@@ -51,12 +51,7 @@
           </div>
 
           <div class="col-6">
-            <mat-form-field appearance="outline">
-              <mat-label>Kod Pocztowy</mat-label>
-              <input matInput type="text" [(ngModel)]="data.postcode" formControlName="postcode" placeholder="Kod Pocztowy" />
-              <mat-icon matSuffix>signpost</mat-icon>
-              <mat-error *ngIf="form.controls['postcode'].hasError('required')">Kod pocztowy jest wymagany</mat-error>
-            </mat-form-field>
+            <app-input title="Kod Pocztowy" [ngModel]="data.postcode" [control]="postcode" [minLength]=6 [maxLength]=6 format="00-000"></app-input>
           </div>
 
           
@@ -68,21 +63,11 @@
         <div class="row my-3">
 
           <div class="col-6">
-            <mat-form-field appearance="outline">
-              <mat-label>Powierzchnia:</mat-label>
-              <input matInput type="text" [(ngModel)]="data.area" formControlName="area" placeholder="Powierzchnia" />
-              <mat-icon matSuffix>height</mat-icon>
-              <mat-error *ngIf="form.controls['area'].hasError('required')">Powierzchnia jest wymagana</mat-error>
-            </mat-form-field>
+            <app-input title="Powierzchnia" [ngModel]="data.area" class="my-2" [minLength]=5 [maxLength]=5 [control]="area" [dropSpecial]=false format="000,00||00,00||0,00" placeholder="X.XX"></app-input>
           </div>
 
           <div class="col-6">
-            <mat-form-field appearance="outline">
-              <mat-label>Stawka za m2</mat-label>
-              <input matInput type="text" [(ngModel)]="data.rate" formControlName="rate" placeholder="Stawka" />
-              <mat-icon matSuffix>price_check</mat-icon>
-              <mat-error *ngIf="form.controls['rate'].hasError('required')">Stawka jest wymagana</mat-error>
-            </mat-form-field>
+            <app-input title="Stawka (za m2)" [ngModel]="data.rate" class="my-2" [minLength]=5 [maxLength]=5 [control]="rate" [dropSpecial]=false format="000,00||00,00||0,00" placeholder="X.XX"></app-input>
           </div>
 
         </div>
