--- a/src/app/components/admin/payments/payments-add/payments-add.component.html
+++ b/src/app/components/admin/payments/payments-add/payments-add.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="row">
           <div class="col">
-            <app-input title="Kwota" [minLength]=5 [maxLength]=5 [control]="price" [dropSpecial]=false format="separator.2" placeholder="X.XX"></app-input>
+            <app-input2 [control]="amount" title="Kwota"></app-input2>
           </div>
           <div class="col">
             <mat-form-field appearance="outline">
