--- a/src/app/components/admin/users/users-edit/users-edit.component.scss
+++ b/src/app/components/admin/users/users-edit/users-edit.component.scss
@@ -12,12 +12,14 @@
   }
   
   mat-card-title {
+    color: #fff;
     display: flex !important;
     flex-direction: column;
     align-content: center;
     justify-content: center;
     align-items: center;
     margin-bottom: 20px !important;
+    
   }
   
   .mat-card-content {
@@ -29,4 +31,17 @@
     align-items: stretch;
     gap: 10px;
   }
+
+  .banner {
+    background-image: linear-gradient(169deg, #5983fc 16%, #1e50c8 89%) !important;
+    height: 60px;
+    border-radius: 5px;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+  }
+
   
