--- a/src/app/components/admin/raports/raports-add/raports-add.component.html
+++ b/src/app/components/admin/raports/raports-add/raports-add.component.html
@@ -60,7 +60,7 @@
   
   
               <div class="col-12 mt-5 mb-3">
-                <button mat-raised-button color="primary" (click)="addOtherStatus()">Dodaj pole do rozliczeń</button>
+                <button mat-raised-button type="button" color="primary" (click)="addOtherStatus()">Dodaj pole do rozliczeń</button>
               </div>
             </div>
             <div class="col-12">
@@ -78,8 +78,10 @@
                   <div class="col">
                     <mat-form-field appearance="outline">
                       <mat-label>Zużycie</mat-label>
-                      <input formControlName="amount" matInput type="number" class="example-right-align" step="0.01" min="0.00" oninput="validity.valid||(value='');" placeholder="0,00">
+                      <input matInput currencyMask formControlName="amount" [options]="{ prefix: ' ', thousands: '', decimal: '.', align:'right', precision: 2}" />
+                      <mat-error *ngIf="otherStatus.controls[i].get('amount')?.hasError('required')">Wypełnij pole zużycia</mat-error>
                     </mat-form-field>
+                   
                   </div>
 
                   <div class="col">
@@ -90,15 +92,17 @@
                           {{conv.label}}
                         </mat-option>
                       </mat-select>
+                      <mat-error *ngIf="otherStatus.controls[i].get('converter')?.hasError('required')">Jednostka jest wymagana do wystawiania rozliczenia</mat-error>
                     </mat-form-field>
                   </div>
 
+
                   <div class="col">
-                    <mat-form-field appearance="outline" floatLabel="always">
+                    <mat-form-field appearance="outline" fxFlex>
                       <mat-label>Koszt jednostkowy</mat-label>
-                      <input formControlName="price" matInput type="number" step="0.01" min="0.00" oninput="validity.valid||(value='');" class="example-right-align" placeholder="0,00">
-                      <span matPrefix>zł&nbsp;</span>
-                    </mat-form-field>
+                      <input matInput currencyMask formControlName="price" [options]="{ prefix: 'zł ', thousands: '', decimal: '.', align:'right', precision: 2}" />
+                      <mat-error *ngIf="otherStatus.controls[i].get('price')?.hasError('required')">Wypełnij koszt jednostkowy</mat-error>
+                  </mat-form-field>
                   </div>
 
                   
