--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
               <mat-selection-list [multiple]="false">
                 <mat-list-option *ngFor="let x of lastburden | async" [value]="x">
                   Data Zaksięgowania: {{x.date.seconds*1000 | date: 'dd/MM/YYYY'}}<br />
-                  Kwota: {{x.price}} zł
+                  Kwota: {{x.amount}} zł
                 </mat-list-option>
               </mat-selection-list>
             </div>
@@ -25,7 +25,7 @@
               <mat-selection-list [multiple]="false">
                 <mat-list-option *ngFor="let x of lastpayments | async" [value]="x">
                   Data Zaksięgowania: {{x.date.seconds*1000 | date: 'dd/MM/YYYY'}}<br />
-                  Kwota: {{x.price}} zł
+                  Kwota: {{x.amount}} zł
                 </mat-list-option>
               </mat-selection-list>
             </div>
