--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,6 +1,6 @@
 .dashboard-panel {
     padding: 5px 15px 15px 5px;
-    background-color: #f2f2f2;
+    background-color: #ffffff;
     font-size: 14px;
     box-shadow: 5px 5px 5px rgb(0 0 0 / 30%);
 
@@ -13,6 +13,7 @@
     h2 {
         margin: 2%;
         color: #537ef0;
+        height: 50px;
     }
 
 }
