a little bit responsives

--- a/src/app/components/admin/raports/raports.component.scss
+++ b/src/app/components/admin/raports/raports.component.scss
@@ -3,6 +3,7 @@
 }
 
 .search-panel {
+    margin: 25px;
     background-color: #ffffffde;
     padding: 10px 25px 10px 25px;
     border: 1px solid #ddd;
