--- a/src/app/components/admin/payments/payments.component.html
+++ b/src/app/components/admin/payments/payments.component.html
@@ -1,17 +1,18 @@
 <div class="container-fluid mt-5">
 
-  <div class="row my-4" fxFlexLayout="row" fxFlexLayout.xs="column" fxLayoutGap.xs="20">
+  <div class="row my-4" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutGap="20">
     <div fxFlex="60" fxLayoutAlign="center">
-      <mat-form-field class="search-panel" fxFlex="50">
-        <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
-      </mat-form-field>
-    </div>
-    <div fxFlex fxLayoutAlign="center center">
-      <a mat-raised-button color="primary" (click)="addPayment()">
-        <mat-icon aria-hidden="false" aria-label="person_add">account_balance_wallet</mat-icon> Dodaj Płatność
-      </a>
-    </div>
+        <mat-form-field class="search-panel" fxFlex="50" fxFlex.sm fxFlex.xs>
+          <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
+        </mat-form-field>
+      </div>
+      <div fxFlex fxLayoutAlign="center center">
+        <a mat-raised-button color="primary" fxFlex.sm fxFlex.xs (click)="addPayment()">
+          <mat-icon aria-hidden="false" aria-label="person_add">account_balance_wallet</mat-icon> Dodaj Płatność
+        </a>
+      </div>
   </div>
+
 
   <div class="row">
     <div class="col">
