--- a/src/app/components/admin/premises/premises.component.html
+++ b/src/app/components/admin/premises/premises.component.html
@@ -1,16 +1,16 @@
 <div class="container-fluid mt-5">
-    <div class="row my-4" fxFlexLayout="row" fxFlexLayout.xs="column" fxLayoutGap.xs="20">
-      <div fxFlex="60" fxLayoutAlign="center">
-        <mat-form-field class="search-panel" fxFlex="50" fxFlex.xs>
+  <div class="row my-4" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutGap="20">
+    <div fxFlex="60" fxLayoutAlign="center">
+        <mat-form-field class="search-panel" fxFlex="50" fxFlex.sm fxFlex.xs>
           <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
         </mat-form-field>
       </div>
       <div fxFlex fxLayoutAlign="center center">
-        <a mat-raised-button color="primary" (click)="addApartment()">
+        <a mat-raised-button color="primary" fxFlex.sm fxFlex.xs  (click)="addApartment()">
           <mat-icon aria-hidden="false" aria-label="person_add">person_add</mat-icon> Dodaj Lokal
         </a>
       </div>
-    </div>
+  </div>
   
     <div class="col-12">
       <div class="mat-elevation-z8">
