--- a/src/app/components/admin/raports/raports.component.html
+++ b/src/app/components/admin/raports/raports.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid mt-5">
 
-
-    <div class="row mb-3">
-       <div class="col-6 justify-content-md-center">
-      <mat-form-field class="search-panel" fxFlex="60">
-        <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
-      </mat-form-field>
-  
-    </div>
+  <div class="row my-4" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutGap="20">
+    <div fxFlex="100" fxLayoutAlign="center">
+        <mat-form-field class="search-panel" fxFlex="50" fxFlex.sm fxFlex.xs>
+          <input #box matInput type="text" (keyup)="doFilter(box.value)" placeholder="Wyszukaj..">
+        </mat-form-field>
+      </div>
   </div>
+  
+
   
     <div class="col-12">
       <div class="mat-elevation-z8">
