--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,8 @@
+.mcontainer {
+  width: 100%;
+  height: 100%;
+}
+
 .menu-spacer {
     flex: 1 1 auto;
   }
@@ -44,3 +49,5 @@
     background-size: contain;
     background-position: center;
   }
+
+  router-outlet{ height: 100%;}
