--- a/src/app/components/advert/advert.component.html
+++ b/src/app/components/advert/advert.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5" fxFlex fxLayout="column" fxLayoutGap="30">
+<div class="container mt-5" fxFlex fxLayout="column" fxLayoutGap="30">
 <div *ngIf="authService.userMod | async" fxFlex fxLayout="row" fxLayoutAlign="center center">
     <button mat-raised-button fxFlex.xs="100" fxFlex.sm="100" fxFlex.md="100" (click)="addAdvert()">Dodaj Ogłoszenie</button>
 </div>
@@ -18,5 +18,6 @@
   </div>
 <div class="container my-5" *ngIf="(len | async) == 0">
     <nz-empty [nzNotFoundContent]="null"></nz-empty>
+    <div class="text-center">Nie ma ogłoszeń</div>
 </div>
 </div>
